--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/EditSetItem.razor
@@ -1,5 +1,6 @@
 ﻿@page "/SetItem/Edit/{id}"
 
+@using Kooco.Pikachu.Items
 @using Kooco.Pikachu.Items.Dtos;
 @using Kooco.Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
@@ -7,6 +8,7 @@
 
 @inject NavigationManager NavigationManager;
 @inject IStringLocalizer<PikachuResource> L;
+@inject IItemAppService ItemAppService
 
 <h3>@L["EditSetItem"]</h3>
 
@@ -35,19 +37,19 @@
             <div class="col-10 row">
                 <Field>
                     <FilePicker @ref="FilePicker"
-                                        Multiple
-                                 Changed="OnFileUploadAsync"
-                                 ShowMode="FilePickerShowMode.List"
-                                 Accept=".jpg, .png, .svg, ,.jpeg,.webp">
-                         <FileTemplate>
-                             <Div Flex="Flex.JustifyContent.Between">
-                                 <Div>
-                                     <Heading Size="HeadingSize.Is6">@context.File.Name</Heading>
-                                     <Paragraph>@FilePicker.GetFileSizeReadable(context.File)</Paragraph>
-                                 </Div>
-                                 <Div Class="ps-2">
-                                     <Div>
-                                         @if (context.File.Status == FileEntryStatus.Ready)
+                                Multiple
+                                Changed="OnFileUploadAsync"
+                                ShowMode="FilePickerShowMode.List"
+                                Accept=".jpg, .png, .svg, ,.jpeg,.webp">
+                        <FileTemplate>
+                            <Div Flex="Flex.JustifyContent.Between">
+                                <Div>
+                                    <Heading Size="HeadingSize.Is6">@context.File.Name</Heading>
+                                    <Paragraph>@FilePicker.GetFileSizeReadable(context.File)</Paragraph>
+                                </Div>
+                                <Div Class="ps-2">
+                                    <Div>
+                                        @if (context.File.Status == FileEntryStatus.Ready)
                                         {
                                             <Icon TextColor="TextColor.Primary" Name="IconName.FileUpload" />
                                         }
@@ -84,10 +86,10 @@
                         {
                             <div class="image-container">
                                 <Image class="blur-image" Source="@image.ImageUrl" Text="Item Image" Fluid />
-                                 <button class="delete-button" @onclick="() => DeleteImageAsync(image.BlobImageName)">
-                                     <i class="fa fa-trash"></i>
-                                 </button>
-                             </div>
+                                <button class="delete-button" @onclick="() => DeleteImageAsync(image.BlobImageName)">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            </div>
                         }
                     </div>
                 </div>
@@ -154,59 +156,59 @@
         </div>
 
         <div class="row mt-2">
-                <div class="col-2">
-                    @L["AddItem"]
-                </div>
-                <div class="col-9">
-                    <Autocomplete TItem="ItemWithItemTypeDto"
-                                  TValue="Guid?"
-                                  Data="@ItemsList"
-                                  TextField="@(( item ) => item.Name)"
-                                  ValueField="@(( item ) => item.Id)"
-                                  @bind-SelectedText="SelectedAutoCompleteText"
-                                  Placeholder="Search..."
-                                  Filter="AutocompleteFilter.StartsWith"
-                                  CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
-                                  HighlightSearch
-                                  Immediate="true"
-                                  SelectedValueChanged="OnSelectedValueChanged"
-                                  @ref="AutocompleteField">
-                        <NotFoundContent> @L["NotFound"] </NotFoundContent>
-                    </Autocomplete>
-                </div>
-                <div class="col-1">
-                    <Button Color="Color.Danger" Clicked="RemoveSelectedItems">
-                        <i class="fa fa-trash"></i>
-                    </Button>
-                </div>
+            <div class="col-2">
+                @L["AddItem"]
+            </div>
+            <div class="col-9">
+                <Autocomplete TItem="ItemWithItemTypeDto"
+                              TValue="Guid?"
+                              Data="@ItemsList"
+                              TextField="@(( item ) => item.Name)"
+                              ValueField="@(( item ) => item.Id)"
+                              @bind-SelectedText="SelectedAutoCompleteText"
+                              Placeholder="Search..."
+                              Filter="AutocompleteFilter.StartsWith"
+                              CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
+                              HighlightSearch
+                              Immediate="true"
+                              SelectedValueChanged="OnSelectedValueChanged"
+                              @ref="AutocompleteField">
+                    <NotFoundContent> @L["NotFound"] </NotFoundContent>
+                </Autocomplete>
+            </div>
+            <div class="col-1">
+                <Button Color="Color.Danger" Clicked="RemoveSelectedItems">
+                    <i class="fa fa-trash"></i>
+                </Button>
+            </div>
         </div>
 
         <div class="row mt-1">
-                <div class="col-2">
-                </div>
-                <div class="col-10">
-                    <Table Narrow>
-                        <TableHeader>
-                            <TableRow>
-                                <TableHeaderCell Class="text-center" Style="width: 20px;">
-                                    <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
-                                </TableHeaderCell>
-                                <TableHeaderCell>
-                                    @L["ItemList"]
-                                </TableHeaderCell>
-                                <TableHeaderCell Class="text-center"  Style="width: 150px;">
-                                    @L["Quantity"]
-                                </TableHeaderCell>
-                            </TableRow>
-                        </TableHeader>
-                        <TableBody>
-                            @foreach (var item in ItemDetails)
-                            {
-                                <TableRow Class="text-center align-items-center">
-                                    <TableRowCell>
-                                        <InputCheckbox class="form-check-input" @bind-Value="@item.IsSelected"></InputCheckbox>
-                                    </TableRowCell>
-                                    <TableRowCell Class="text-start">
+            <div class="col-2">
+            </div>
+            <div class="col-10">
+                <Table Narrow>
+                    <TableHeader>
+                        <TableRow>
+                            <TableHeaderCell Class="text-center" Style="width: 20px;">
+                                <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
+                            </TableHeaderCell>
+                            <TableHeaderCell>
+                                @L["ItemList"]
+                            </TableHeaderCell>
+                            <TableHeaderCell Class="text-center" Style="width: 150px;">
+                                @L["Quantity"]
+                            </TableHeaderCell>
+                        </TableRow>
+                    </TableHeader>
+                    <TableBody>
+                        @foreach (var item in ItemDetails)
+                        {
+                            <TableRow Class="text-center align-items-center">
+                                <TableRowCell>
+                                    <InputCheckbox class="form-check-input" @bind-Value="@item.IsSelected"></InputCheckbox>
+                                </TableRowCell>
+                                <TableRowCell Class="text-start">
                                     <Div Class="d-flex flex-row">
                                         @if (!item.ImageUrl.IsNullOrWhiteSpace())
                                         {
@@ -216,18 +218,60 @@
                                         }
                                         <Div Class="p-2">
                                             <h4>@item.ItemName</h4>
-                                            <p>@item.ItemDescriptionTitle</p>
+
+                                            @if (item.Attribute1Values?.Count > 0)
+                                            {
+                                                <Div class="mt-2">
+                                                    <Select TValue="string" Size="Size.Small" @bind-SelectedValue="item.Attribute1Value">
+                                                        <SelectItem Value="(string?)null" Disabled></SelectItem>
+                                                        @foreach (var attribute1Value in item.Attribute1Values)
+                                                        {
+                                                            <SelectItem Value="attribute1Value">
+                                                                @attribute1Value
+                                                            </SelectItem>
+                                                        }
+                                                    </Select>
+                                                </Div>
+                                            }
+                                            @if (item.Attribute2Values?.Count > 0)
+                                            {
+                                                <Div class="mt-2">
+                                                    <Select TValue="string" Size="Size.Small" @bind-SelectedValue="item.Attribute2Value">
+                                                        <SelectItem Value="(string?)null" Disabled></SelectItem>
+                                                        @foreach (var attribute2Value in item.Attribute2Values)
+                                                        {
+                                                            <SelectItem Value="attribute2Value">
+                                                                @attribute2Value
+                                                            </SelectItem>
+                                                        }
+                                                    </Select>
+                                                </Div>
+                                            }
+                                            @if (item.Attribute3Values?.Count > 0)
+                                            {
+                                                <Div class="mt-2">
+                                                    <Select TValue="string" Size="Size.Small" @bind-SelectedValue="item.Attribute3Value">
+                                                        <SelectItem Value="(string?)null" Disabled></SelectItem>
+                                                        @foreach (var attribute3Value in item.Attribute3Values)
+                                                        {
+                                                            <SelectItem Value="attribute3Value">
+                                                                @attribute3Value
+                                                            </SelectItem>
+                                                        }
+                                                    </Select>
+                                                </Div>
+                                            }
                                         </Div>
                                     </Div>
-                                    </TableRowCell>
-                                    <TableRowCell>
-                                        <NumericEdit Class="form-control form-control-sm" @bind-Value="item.Quantity" Min="1"></NumericEdit>
-                                    </TableRowCell>
-                                </TableRow>
-                            }
-                        </TableBody>
-                    </Table>
-                </div>
+                                </TableRowCell>
+                                <TableRowCell>
+                                    <NumericEdit Class="form-control form-control-sm" @bind-Value="item.Quantity" Min="1"></NumericEdit>
+                                </TableRowCell>
+                            </TableRow>
+                        }
+                    </TableBody>
+                </Table>
+            </div>
         </div>
 
         <div class="row mt-2">
@@ -238,7 +282,7 @@
                 <InputNumber class="form-control no-spinners" TValue="float" @bind-Value="@CreateUpdateSetItemDto.SetItemPrice" />
             </div>
         </div>
-            <div class="row mt-2">
+        <div class="row mt-2">
             <div class="col-2">
                 <label>@L["SetGroupBuyPrice"]</label>
             </div>
@@ -251,7 +295,7 @@
                 <label>@L["CommodityAttributes"]</label>
             </div>
             <div class="col-10">
-               @*  <div class="row">
+                @*  <div class="row">
                     <div class="col-3">
                         <label>@L["TimeLimitPeriod"]</label>
                     </div>
