--- a/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Refunds/Refund.razor
@@ -19,184 +19,185 @@
 
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
 
- <div class="row">
-     <div class="col-6">
-         <h3>@L["RefundsList"]</h3>
-     </div>
-     <div class="col-6 text-lg-end">
-         <div class="input-group">
-             <InputText class="form-control form-control-sm search-bar" @bind-Value="@Filter" placeholder="@L["Search"]"></InputText>
-             <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="OnSearch">
-                 <i class="fa fa-search"></i>
-             </Button>
-         </div>
-     </div>
- </div>
+    <div class="row">
+        <div class="col-6">
+            <h3>@L["RefundsList"]</h3>
+        </div>
+        <div class="col-6 text-lg-end">
+            <div class="input-group">
+                <InputText class="form-control form-control-sm search-bar" @bind-Value="@Filter" placeholder="@L["Search"]"></InputText>
+                <Button Type="ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="OnSearch">
+                    <i class="fa fa-search"></i>
+                </Button>
+            </div>
+        </div>
+    </div>
 
- <Card>
-    <CardBody>
-        <DataGrid TItem="RefundDto"
-                   Data="Refunds"
-                   ReadData="OnDataGridReadAsync"
-                   TotalItems="TotalCount"
-                   ShowPager="true"
-                   PageSize="PageSize"
-                   RowDoubleClicked="NavigateToOrderDetails"
-                   Responsive="true"
-                   SortChanged="OnSortChange">
-            <DataGridColumns>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["OrderNo"]">
-                     <DisplayTemplate>
-                         @context.Order.OrderNo
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["MerchantTradeNo"]">
-                     <DisplayTemplate>
-                         @context.Order.MerchantTradeNo
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["TradeNo"]">
-                     <DisplayTemplate>
-                         @context.Order.TradeNo
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["SubmissionTime"]">
-                    <DisplayTemplate>
-                        @context.CreationTime.ToShortDateString() @context.CreationTime.ToShortTimeString()
-                    </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["ReviewCompletionTime"]">
-                    <DisplayTemplate>
-                        @context.ReviewCompletionTime?.ToShortDateString() @context.ReviewCompletionTime?.ToShortTimeString()
-                    </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["CustomerName"]">
-                    <DisplayTemplate>
-                        @context.Order.CustomerName
-                    </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn Width="15%" 
-                                 TItem="RefundDto"
-                                 Caption="@L["RefundReview"]">
-                    <DisplayTemplate>
-                        @if (!(context.RefundReview is RefundReviewStatus.Proccessing && 
-                               context.Order.PaymentMethod is PaymentMethods.CreditCard))
-                        {
-                            <Div Class="d-flex">
-                                <Select Disabled 
-                                        TValue="RefundReviewStatus" 
-                                        Class="form-select form-select-sm mb-1" 
-                                        SelectedValue="@context.RefundReview" 
-                                        SelectedValueChanged="@(e => RefundReviewChanged(e, context))">
-                                    @foreach (object enumValue in Enum.GetValues(typeof(RefundReviewStatus)))
-                                    {
-                                        <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
-                                    }
-                                </Select>
-
-                                @if (context.RefundReview is RefundReviewStatus.Fail) 
-                                {
-                                    <Button Class="btn-white"
-                                            Clicked="@((e) => RefundApproved(context))">
-                                        <i class="fas fa-rotate" />
-                                    </Button>
-                                }
-                            </Div>
-                        }
-                        else if (context.RefundReview is RefundReviewStatus.Proccessing && 
-                                 context.Order.PaymentMethod is PaymentMethods.CreditCard)
-                        {
-                            <Div Class="d-flex">
-                                <Select TValue="RefundReviewStatus" 
-                                        Class="form-select form-select-sm mb-1"
-                                        SelectedValue="@context.RefundReview"
-                                        SelectedValueChanged="@(e => RefundReviewChanged(e, context))">
-                                    @foreach (object enumValue in Enum.GetValues(typeof(RefundReviewStatus)))
-                                    {
-                                        @if(enumValue.ToString() is "Success" || enumValue.ToString() is "Fail")
+    <Card>
+        <CardBody>
+            <DataGrid TItem="RefundDto"
+                      Data="Refunds"
+                      ReadData="OnDataGridReadAsync"
+                      TotalItems="TotalCount"
+                      ShowPager="true"
+                      PageSize="PageSize"
+                      RowDoubleClicked="NavigateToOrderDetails"
+                      Responsive="true"
+                      SortChanged="OnSortChange">
+                <DataGridColumns>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["OrderNo"]">
+                        <DisplayTemplate>
+                            @context.Order.OrderNo
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["MerchantTradeNo"]">
+                        <DisplayTemplate>
+                            @context.Order.MerchantTradeNo
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["TradeNo"]">
+                        <DisplayTemplate>
+                            @context.Order.TradeNo
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["SubmissionTime"]">
+                        <DisplayTemplate>
+                            @context.CreationTime.ToShortDateString() @context.CreationTime.ToShortTimeString()
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["ReviewCompletionTime"]">
+                        <DisplayTemplate>
+                            @context.ReviewCompletionTime?.ToShortDateString() @context.ReviewCompletionTime?.ToShortTimeString()
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["CustomerName"]">
+                        <DisplayTemplate>
+                            @context.Order.CustomerName
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn Width="15%"
+                                    TItem="RefundDto"
+                                    Caption="@L["RefundReview"]">
+                        <DisplayTemplate>
+                            @if (!(context.RefundReview is RefundReviewStatus.Proccessing &&
+                            context.Order.PaymentMethod is PaymentMethods.CreditCard))
+                            {
+                                <Div Class="d-flex">
+                                    <Select Disabled
+                                            TValue="RefundReviewStatus"
+                                            Class="form-select form-select-sm mb-1"
+                                            SelectedValue="@context.RefundReview"
+                                            SelectedValueChanged="@(e => RefundReviewChanged(e, context))"
+                                            Style="min-width: 150px;">
+                                        @foreach (object enumValue in Enum.GetValues(typeof(RefundReviewStatus)))
                                         {
                                             <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
                                         }
-                                    }
-                                </Select>
+                                    </Select>
 
-                                @if (context.RefundReview is RefundReviewStatus.Fail ||
-                                     context.RefundReview is RefundReviewStatus.Proccessing) 
-                                {
-                                    <Button Class="btn-white"
-                                            Clicked="@((e) => RefundApproved(context))">
-                                        <i class="fas fa-rotate" />
+                                    @if (context.RefundReview is RefundReviewStatus.Fail)
+                                    {
+                                        <Button Class="btn-white"
+                                                Clicked="@((e) => RefundApproved(context))">
+                                            <i class="fas fa-rotate" />
+                                        </Button>
+                                    }
+                                </Div>
+                            }
+                            else if (context.RefundReview is RefundReviewStatus.Proccessing &&
+                            context.Order.PaymentMethod is PaymentMethods.CreditCard)
+                            {
+                                <Div Class="d-flex">
+                                    <Select TValue="RefundReviewStatus"
+                                            Class="form-select form-select-sm mb-1"
+                                            SelectedValue="@context.RefundReview"
+                                            SelectedValueChanged="@(e => RefundReviewChanged(e, context))">
+                                        @foreach (object enumValue in Enum.GetValues(typeof(RefundReviewStatus)))
+                                        {
+                                            @if (enumValue.ToString() is "Success" || enumValue.ToString() is "Fail")
+                                            {
+                                                <SelectItem Value="@enumValue">@L[enumValue.ToString()]</SelectItem>
+                                            }
+                                        }
+                                    </Select>
+
+                                    @if (context.RefundReview is RefundReviewStatus.Fail ||
+                                   context.RefundReview is RefundReviewStatus.Proccessing)
+                                    {
+                                        <Button Class="btn-white"
+                                                Clicked="@((e) => RefundApproved(context))">
+                                            <i class="fas fa-rotate" />
+                                        </Button>
+                                    }
+                                </Div>
+                            }
+                            @if (CanProcessRefund && context.RefundReview is RefundReviewStatus.PendingReview)
+                            {
+                                <Div Class="d-flex justify-content-center flex-nowrap gap-1">
+                                    <Button Type="ButtonType.Button"
+                                            Clicked="@(e => RefundApproved(context))"
+                                            Class="btn btn-sm btn-primary">
+                                        @L["Approve"]
                                     </Button>
-                                }
-                            </Div>
-                        }
-                        @if (CanProcessRefund && context.RefundReview is RefundReviewStatus.PendingReview)
-                        {
-                            <Div>
-                                <Button Type="ButtonType.Button" 
-                                        Clicked="@(e => RefundApproved(context))" 
-                                        Class="btn btn-sm btn-primary">
-                                    @L["Approve"]
-                                </Button>
-                                <Button Type="ButtonType.Button" 
-                                        Clicked="@(e => RefundReject(context))" 
-                                        Class="btn btn-sm btn-danger">
-                                    @L["Reject"]
-                                </Button>
-                            </Div>
-                        }
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                <DataGridColumn TItem="RefundDto"
-                                Caption="@L["Approver"]">
-                    <DisplayTemplate>
-                        @L[context.Approver??""]
-                    </DisplayTemplate>
-                </DataGridColumn>
-                <DataGridColumn TItem="RefundDto"
-                                Caption="@L["Refunder"]">
-                    <DisplayTemplate>
-                        @L[context.Refunder??""]
-                    </DisplayTemplate>
-                </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                Caption="@L["MerchantRemarks"]">
-                     <DisplayTemplate>
-                         @context.Order.Remarks
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["ShippingStatus"]">
-                     <DisplayTemplate>
-                         @L[context.Order.ShippingStatus.ToString()]
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["PaymentMethod"]">
-                     <DisplayTemplate>
-                         @L[context.Order.PaymentMethod.ToString()]
-                     </DisplayTemplate>
-                 </DataGridColumn>
-                 <DataGridColumn TItem="RefundDto"
-                                 Caption="@L["CheckoutAmount"]">
-                     <DisplayTemplate>
-                         $@L[context.Order.TotalAmount.ToString("N2")]
-                     </DisplayTemplate>
-                 </DataGridColumn>
-            </DataGridColumns>
-            <FirstPageButtonTemplate>@L[PikachuResource.FirstPage]</FirstPageButtonTemplate>
-            <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
-            <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
-            <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
-        </DataGrid>
-    </CardBody>
-</Card>
+                                    <Button Type="ButtonType.Button"
+                                            Clicked="@(e => RefundReject(context))"
+                                            Class="btn btn-sm btn-danger">
+                                        @L["Reject"]
+                                    </Button>
+                                </Div>
+                            }
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["Approver"]">
+                        <DisplayTemplate>
+                            @L[context.Approver ?? ""]
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["Refunder"]">
+                        <DisplayTemplate>
+                            @L[context.Refunder ?? ""]
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["MerchantRemarks"]">
+                        <DisplayTemplate>
+                            @context.Order.Remarks
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["ShippingStatus"]">
+                        <DisplayTemplate>
+                            @L[context.Order.ShippingStatus.ToString()]
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["PaymentMethod"]">
+                        <DisplayTemplate>
+                            @L[context.Order.PaymentMethod.ToString()]
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                    <DataGridColumn TItem="RefundDto"
+                                    Caption="@L["CheckoutAmount"]">
+                        <DisplayTemplate>
+                            $@L[context.Order.TotalAmount.ToString("N2")]
+                        </DisplayTemplate>
+                    </DataGridColumn>
+                </DataGridColumns>
+                <FirstPageButtonTemplate>@L[PikachuResource.FirstPage]</FirstPageButtonTemplate>
+                <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
+                <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
+                <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
+            </DataGrid>
+        </CardBody>
+    </Card>
 </LoadingIndicator>
 
 @{
